--- a/react/task-list/prod/manifest.json
+++ b/react/task-list/prod/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "task-list",
+  "name": "Task list",
   "icons": [
     {
       "src": "favicon.ico",
